--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,17 +5,33 @@ on:
     branches: [main]
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: github-pages
+          path: "dist"
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Setup Pages
         uses: actions/configure-pages@v3
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: "docs"
-          name: github-pages
 
       - name: Deploy to GitHub Pages
         id: deployment
@@ -23,7 +39,6 @@ jobs:
         with:
           artifact_name: github-pages
 
-      # delete-artifact
       - name: Clean
         uses: geekyeggo/delete-artifact@v2
         with:
