--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,6 +29,7 @@ jobs:
           path: "dist"
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Setup Pages
         uses: actions/configure-pages@v3
