--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,11 +22,12 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
+      - name: Upload Pages Artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          name: github-pages
-          path: "dist"
+          artifact-name: github-pages
+          path: dist/
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -48,8 +49,3 @@ jobs:
         uses: actions/deploy-pages@v1
         with:
           artifact_name: github-pages
-
-      - name: Clean
-        uses: geekyeggo/delete-artifact@v2
-        with:
-          name: github-pages
